Update api server logic and regenerate client schemas
